--- a/app/src/main/res/layout/fragment_fragmento1.xml
+++ b/app/src/main/res/layout/fragment_fragmento1.xml
@@ -9,7 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        tools:text="Fragmento 1" />
+        android:text="Fragmento 1"
+        android:textColor="@color/colorAccent"
+        android:textSize="36sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
